--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -12,6 +12,7 @@
         display: block;
     }
 }
+
 .mobile-menu__close {
     position: absolute;
     top: 10px;
@@ -40,14 +41,19 @@
         margin-bottom: 206px;
     }
 }
+
 .mobile-menu__list {
+    margin-bottom: 32px;
+}
+
+.mobile-menu__links{
+    text-decoration: none;
+    color: var(--text-color);
     font-weight: 500;
     font-size: 40px;
     line-height: 1.17;
     letter-spacing: 0.02em;
-    color: var(--text-color);
-    margin-bottom: 32px;
-
+    
     &--current{
         color: var(--color-accent);
     }
